# SlackEmojiBulkMigrator

./: .gitignore  Pipfile  README.md  __init__.py  api_handler.py  configuration_validation.py  export-import-slack-emoji.py  extract_har.py  import-slack-emoji-cookie-auth.py  import-slack-emoji.py  main.py  pyproject.toml  requirements.txt
config/: api_configuration.ejson
emoji_bulk_migrator/: __init__.py  extract_har.py  local_file_handler.py  slack_api_handler.py  slack_http_handler.py  slack_web_api_handler.py
emoji_bulk_migrator_tests/: conftest.py  test_local_file_handler.py  test_main.py  test_slack_api_handler.py  test_slack_http_handler.py
