[tool.poetry]
name = "slackemojibulkmigrator"
version = "0.1.0"
description = ""
authors = ["Luke Taranto <luke.taranto@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.2"
aiohttp = "^3.8.4"
isort = "^5.12.0"
slack-sdk = "^3.20.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
pytest-cov = "^4.0.0"
mockito = "^1.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
